--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/aleksUIX/m3/issues"
   },
-  "homepage": "https://github.com/aleksUIX/m3#readme"
+  "homepage": "https://github.com/aleksUIX/m3#readme",
+  "devDependencies": {
+    "webpack": "^3.4.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
+  }
 }
