--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Money making machine",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+ssh://git@github.com/aleksUIX/m3.git",
