--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "homepage": "https://github.com/aleksUIX/m3#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.4.1",
