--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --colors --config webpack.config.js",
     "watch": "webpack --colors --watch",
     "start": "webpack-dev-server --open",
+    "eslint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+ssh://git@github.com/aleksUIX/m3.git",
@@ -31,6 +32,11 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
