--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
     "html-webpack-plugin": "^2.30.1",
+    "jshint": "^2.9.5",
+    "jshint-loader": "^0.8.4",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
