--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Money making machine",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --colors --config webpack.config.js",
+    "build": "webpack --colors --config webpack.config.babel.js",
     "watch": "webpack --colors --watch",
     "start": "webpack-dev-server --open",
     "eslint": "eslint .",
@@ -31,6 +31,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.1",
