--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Money making machine",
   "main": "index.js",
   "scripts": {
-    "webpack:node": "cross-env PLATFORM=node webpack --colors --config webpack.config.babel.js",
-    "webpack:web": "cross-env PLATFORM=browser webpack --colors --config webpack.config.babel.js",
+    "webpack:node": "webpack --colors --config webpack.config.babel.js --target node",
+    "webpack:web": "webpack --colors --config webpack.config.babel.js --target web",
     "build:nodeapp": "npm run webpack:node",
     "build:webapp": "npm run webpack:web",
     "watch:nodeapp": "npm run webpack:node --watch",
     "watch:webapp": "npm run webpack:web --watch",
     "start:nodeapp": "npm run build:nodeapp && node dist/app.bundle.node.js",
-    "start:webapp": "cross-env PLATFORM=browser webpack-dev-server --open",
+    "start:webapp": "webpack-dev-server --open --target web",
     "eslint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,13 +38,13 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "^5.0.4",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "minimist": "^1.2.0",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
